[package]
name = "radix"
version = "0.1.0"
edition = "2021"

[lib]
name = "radix"
path = "src/radix/radix.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.17"

[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.4", features = ["html_reports"] }
rdxsort = "0.3.0"
rand_xorshift = "0.3.0"

[[bench]]
name = "radix_bench"
harness = false
